--- a/JavaSE基础/常用类.md
+++ b/JavaSE基础/常用类.md
@@ -91,9 +91,9 @@ Integer为了提高初始效率 ，设置了默认范围，如果值超出了127
 
 # String
 
-![image-20220907135201354](https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209071352466.png)
+<img src="https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209071352466.png" alt="image-20220907135201354" style="zoom:50%;" />
 
-![image-20220907135410542](https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209071354602.png)
+<img src="https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209071354602.png" alt="image-20220907135410542" style="zoom:50%;" />
 
 ```java
 @Stable
@@ -112,7 +112,7 @@ String s2 = new String("mu");
 - 方式一：先从常量池中查看是否有“mu"这个数据空间，如果有，直接指向，如果没有则重新创建，然后指向，s最终指向的是常量池的空间地址
 - 方式二： 先在堆中创建空间，里面维护了value的属性，指向常量池的mu空间，如果常量池中没有mu，重新创建，如果有直接通过value指向，最终指向的是堆中的空间地址
 
-![image-20220907141832481](https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209071418553.png)
+<img src="https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209071418553.png" alt="image-20220907141832481" style="zoom: 50%;" />
 
 ### **面试题**
 
@@ -130,7 +130,7 @@ String c = a + b;
 //三个对象 如下图
 ```
 
-![image-20220907161615688](https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209071616859.png)
+<img src="https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209071616859.png" alt="image-20220907161615688" style="zoom: 33%;" />
 
 常用方法
 
@@ -244,7 +244,7 @@ public static void main(String[] args) {
 
 **表示可变的字符序列，可以对字符串内容进行增删，是可变长度，同时是一个容器**
 
-![image-20220907171401697](https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209071714800.png)
+<img src="https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209071714800.png" alt="image-20220907171401697" style="zoom:50%;" />
 
 String和StringBuffer区别
 
@@ -330,7 +330,9 @@ System.out.println(sb1);
 1. 一个可变序列，提供与buffer兼容API但不保证同步(线程安全) 被用作一个建议替换，**用在字符串缓冲区被单个线程使用**，如果可能，建议优先采用该类因为比buffer快
 2. 主要 append insert
 
-![image-20220907234010388](https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209072340547.png) 
+<img src="https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209072340547.png" alt="image-20220907234010388" style="zoom:50%;" />
+
+ 
 
 - StringBuilder 继承 AbstractStringBuilder 类 
 -  实现了 Serializable ,说明 StringBuilder 对象是可以串行化(对象可以网络传输,可以保存到文件)
@@ -342,9 +344,9 @@ System.out.println(sb1);
 
 synchronized 代表同步，当有一个操作，另一个就不能操作
 
-![image-20220907234638535](https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209072346709.png)
+<img src="https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209072346709.png" alt="image-20220907234638535" style="zoom:50%;" />
 
-![image-20220907234934983](https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209072349132.png)
+<img src="https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209072349132.png" alt="image-20220907234934983" style="zoom:50%;" />
 
 # Math
 
