--- a/JavaSE基础/枚举，注解和异常.md
+++ b/JavaSE基础/枚举，注解和异常.md
@@ -147,6 +147,14 @@ enum color implements IMyInterface {
 
 # 注解
 
+[(21条消息) Java基本注解详解(超级详细)_罗汉翔的博客-CSDN博客_java注解](https://blog.csdn.net/qq_44885775/article/details/124265154?ops_request_misc=&request_id=&biz_id=102&utm_term=java注解&utm_medium=distribute.pc_search_result.none-task-blog-2~all~sobaiduweb~default-1-124265154.142^v50^control,201^v3^control_1&spm=1018.2226.3001.4187)
+
+Java注解又称Java标注，是在 JDK5 时引入的新特性，注解（也被称为[元数据](https://so.csdn.net/so/search?q=元数据&spm=1001.2101.3001.7020)）。
+
+Java注解它提供了一种安全的类似注释的机制，用来将任何的信息或元数据（metadata）与程序元素（类、方法、成员变量等）进行关联。
+
+**Java注解是附加在代码中的一些元信息，用于一些工具在编译、运行时进行解析和使用，起到说明、配置的功能。**
+
 annotation
 
 三个基本注解
