--- a/JavaSE基础/线程.md
+++ b/JavaSE基础/线程.md
@@ -618,3 +618,337 @@ class TT extends Thread {
 ### 同步具体方法
 
 只有在一个线程进入到这个对象的时候，只有他持有这个对象锁，他才可以操作，操作完过后，再把这个锁放回去，另外一个线程进来，再拿到这个对象锁，才能够进去。
+
+![image-20220920154017919](https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209201540839.png)
+
+这里卖票不是同时卖，而是为了线程同步
+
+```java
+public class Main {
+    public static void main(String[] args) throws InterruptedException {
+//        SellTicket01 sellTicket01 = new SellTicket01();
+//        SellTicket01 sellTicket02 = new SellTicket01();
+//        SellTicket01 sellTicket03 = new SellTicket01();
+//        //这里出现超卖现象
+//        sellTicket01.start();
+//        sellTicket02.start();
+//        sellTicket03.start();
+
+        SellTicket02 sellTicket02 = new SellTicket02();
+        //同样会超卖
+        new Thread(sellTicket02).start();
+        new Thread(sellTicket02).start();
+        new Thread(sellTicket02).start();
+    }
+}
+
+//继承Thread
+class SellTicket01 extends Thread {
+    private static int ticketNum = 10;//让多个线程共享ticketNum
+
+    @Override
+    public void run() {
+        while (true) {
+            if (ticketNum <= 0) {
+                System.out.println("售票结束");
+                break;
+            }
+            //休眠50ms
+            try {
+                Thread.sleep(10);
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+            System.out.println("窗口" + Thread.currentThread().getName() + "售出一张票" + "剩余票数" + --ticketNum);
+        }
+    }
+}
+
+//使用线程同步
+class SellTicket02 implements Runnable {
+    private int ticketNum = 100;//让多个线程共享ticketNum
+    private boolean loop = true;
+    public synchronized void sell() {//同步方法，再同一时刻，只能有一个线程来执行run方法
+        if (ticketNum <= 0) {
+            System.out.println("售票结束");
+            loop = false;
+            return;
+        }
+
+        //休眠50ms
+        try {
+            Thread.sleep(50);
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+        System.out.println("窗口" + Thread.currentThread().getName() + "售出一张票" + "剩余票数" + --ticketNum);
+
+    }
+
+    @Override
+    public synchronized void run() {
+        while (loop) {
+            sell();
+        }
+    }
+}
+```
+
+# 互斥锁
+
+<img src="https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209202153424.png" alt="image-20220920215358019" style="zoom:33%;" />
+
+<img src="https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209202132025.png" alt="image-20220920213244432" style="zoom: 33%;" />
+
+- 同步方法如果没有使用static 默认锁对象为this
+- 如果static方法，默认锁对象：当前类.class
+- 多个线程的锁必须为同一个，共享的对象，继承Thread的方法就容易出现问题
+
+```java
+package mu;
+
+public class Main {
+    public static void main(String[] args) throws InterruptedException {
+//        SellTicket01 sellTicket01 = new SellTicket01();
+//        SellTicket01 sellTicket02 = new SellTicket01();
+//        SellTicket01 sellTicket03 = new SellTicket01();
+//        //这里出现超卖现象
+//        sellTicket01.start();
+//        sellTicket02.start();
+//        sellTicket03.start();
+
+        SellTicket02 sellTicket02 = new SellTicket02();
+        //同样会超卖
+        new Thread(sellTicket02).start();
+        new Thread(sellTicket02).start();
+        new Thread(sellTicket02).start();//这sell02是同一个对象，只是放到了三个线程里面
+    }
+}
+
+//继承Thread
+class SellTicket01 extends Thread {
+    private static int ticketNum = 10;//让多个线程共享ticketNum
+
+
+    public  void m1() {
+        synchronized (this) {//this这样是锁不住的，因为是继承的Thread类，在启动线程的时候是 new SellRicket01().start() 再new start是一个个不同的对象this也就不同
+            System.out.println("sss");
+        }
+    }
+    @Override
+    public void run() {
+        while (true) {
+            if (ticketNum <= 0) {
+                System.out.println("售票结束");
+                break;
+            }
+            //休眠50ms
+            try {
+                Thread.sleep(10);
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+            System.out.println("窗口" + Thread.currentThread().getName() + "售出一张票" + "剩余票数" + --ticketNum);
+        }
+    }
+}
+
+//使用线程同步
+class SellTicket02 implements Runnable {
+    private int ticketNum = 100;//让多个线程共享ticketNum
+    private boolean loop = true;
+    Object object = new Object();//同一个02对象，操作的是同一个Object
+
+    //这样的话，静态方法上,锁是加在SellTicket02.class上的
+    public synchronized  static void m1() {
+
+    }
+    //如果在静态方法中，实现一个同步代码块，这样处理，类名点class
+    public  static  void m2() {
+        synchronized (SellTicket02.class) {
+            System.out.println("ddd");
+        }
+    }
+
+    //此时是一个同步方法
+    //这时锁再this对象，但是可以再同步代码块上加，那样就是一个同步代码块
+    public /*synchronized*/ void sell() {//同步方法，再同一时刻，只能有一个线程来执行run方法
+
+        synchronized (/*this*/ object) {//同步代码块，互斥锁还是在this对象
+            if (ticketNum <= 0) {
+                System.out.println("售票结束");
+                loop = false;
+                return;
+            }
+
+            //休眠50ms
+            try {
+                Thread.sleep(50);
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+            System.out.println("窗口" + Thread.currentThread().getName() + "售出一张票" + "剩余票数" + --ticketNum);
+        }
+    }
+
+    @Override
+    public  void run() {
+        while (loop) {
+            sell();
+        }
+    }
+}
+```
+
+# 线程的死锁
+
+在做线程同步的时候可能出现的一种问题，就是**多个线程占用了对方的锁资源，但不肯相让，导致了死锁**，要避免
+
+```java
+public class sisuo {
+    public static void main(String[] args) {
+        DeadLockDemo A = new DeadLockDemo(true);
+        DeadLockDemo B = new DeadLockDemo(false);
+        A.start();
+        B.start();
+    }
+}
+
+class DeadLockDemo extends  Thread {
+    static Object o1 = new Object();
+    static Object o2 = new Object();
+    boolean flag;
+    public DeadLockDemo(boolean flag) {
+        this.flag = flag;
+    }
+
+    @Override
+    public void run() {
+        //下面业务逻辑分析 如果flag T 线程A就会先得到o1对象锁，然后去尝试获取o2锁，如果A得不到o2对象锁就会Blocked
+        //同理，B线程也会Blocked
+        if (flag) {
+            synchronized (o1) {
+                System.out.println(Thread.currentThread().getName() + "进入1");
+                synchronized (o2) {
+                    System.out.println(Thread.currentThread().getName() + "进入2");
+                }
+            }
+        } else {
+            synchronized (o2) {
+                System.out.println(Thread.currentThread().getName() + "进入3");
+                synchronized (o1) {
+                    System.out.println(Thread.currentThread().getName() + "进入4");
+                }
+            }
+        }
+    }
+}
+```
+
+# 释放锁
+
+<img src="https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209210859136.png" alt="image-20220921085911594" style="zoom: 33%;" />
+
+**不会释放锁的情况**
+
+1. 线程执行同步代码块或同步方法中，程序调用sleep yield方法暂停当前线程的执行，不会释放锁
+2. 执行同步代码块时，其他线程调用了该线程的suspend方法将该线程挂起，该线程也不会释放锁
+
+<img src="https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209210903466.png" alt="image-20220921090305499" style="zoom:33%;" />
+
+# 作业
+
+<img src="https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209210907914.png" alt="image-20220921090724699" style="zoom: 33%;" />
+
+```java
+public class Test {
+    public static void main(String[] args) {
+        A a = new A();
+        B b = new B(a);
+        a.start();
+        b.start();
+    }
+}
+
+class A extends Thread {
+    private boolean loop = true;
+
+    @Override
+    public void run() {
+        while (loop) {
+            System.out.println((int)(Math.random() * 100 + 1));
+            try {
+                Thread.sleep(1000);
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+        }
+    }
+
+    public void setLoop(boolean loop) {
+        this.loop = loop;
+    }
+}
+
+class B extends Thread {
+    private  A a;
+    private Scanner sc = new Scanner(System.in);
+
+    public B (A a) {
+        this.a = a;
+    }
+
+    @Override
+    public void run() {
+        while (true) {
+            System.out.println("请输入Q才能退出");
+            char key = sc.next().toUpperCase().charAt(0);
+            if (key == 'Q') {
+                a.setLoop(false);//以通知方式结束a线程
+                System.out.println("退出");
+                break;
+            }
+        }
+    }
+}
+```
+
+<img src="https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209211028089.png" alt="image-20220921102852837" style="zoom:33%;" />
+
+**this对象锁是一个非公平锁**
+
+```java
+public class Money {
+    public static void main(String[] args) {
+        T t = new T();
+        Thread thread1 = new Thread(t);
+        thread1.setName("t1");
+        Thread thread2 = new Thread(t);
+        thread2.setName("t2");
+        thread1.start();
+        thread2.start();
+    }
+}
+
+//编程取款的线程
+//这里涉及到多个线程共享资源， 所以我们使用实现Runable方式
+class T implements Runnable {
+    private int money = 10000;
+
+    @Override
+    public void run() {
+        while (true) {
+            //多个线程争夺this对象这个锁,争夺不到的就阻塞在这里
+            synchronized (this) {
+                if (money < 1000) {
+                    System.out.println("余额不足");
+                    break;
+                }
+                money -= 1000;
+                System.out.println(Thread.currentThread().getName() + "去了1000，当余额为" + money);
+            }
+        }
+    }
+}
+```
+
