--- a/JavaSE基础/集合.md
+++ b/JavaSE基础/集合.md
@@ -1,6 +1,6 @@
-![image-20220908135316990](https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209081353078.png)
+<img src="https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209081353078.png" alt="image-20220908135316990" style="zoom:50%;" />
 
-![image-20220908135335750](https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209081353797.png)
+<img src="https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209081353797.png" alt="image-20220908135335750" style="zoom:50%;" />
 
 # Iterable
 
@@ -44,11 +44,11 @@ System.out.println("obj=" + obj)
         }
 ```
 
-![image-20220908223240064](https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209082232213.png)
+<img src="https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209082232213.png" alt="image-20220908223240064" style="zoom:50%;" />
 
 ### 底层源码
 
-![image-20220908223715634](https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209082237947.png)
+<img src="https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209082237947.png" alt="image-20220908223715634" style="zoom:50%;" />
 
 transient表示不被序列化，短暂的
 
@@ -56,11 +56,11 @@ transient表示不被序列化，短暂的
 
 ![image-20220908232122131](https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209082321370.png)
 
-![image-20220908232130694](https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209082321852.png)
+<img src="https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209082321852.png" alt="image-20220908232130694"  />
 
 # Vector
 
-![image-20220908234637048](https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209082346131.png)
+<img src="https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209082346131.png" alt="image-20220908234637048" style="zoom: 50%;" />
 
 # LinkedList
 
@@ -68,19 +68,23 @@ transient表示不被序列化，短暂的
 2. 可以添加任意元素，包括null
 3. 线程不安全，没有实现同步
 
-![image-20220908235019397](https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209082350611.png)
+<img src="https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209082350611.png" alt="image-20220908235019397" style="zoom: 33%;" />
 
-删除源码![image-20220909000526624](https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209090005742.png)
+删除源码
+
+<img src="https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209090005742.png" alt="image-20220909000526624" style="zoom:33%;" />
+
+
 
 ### ArrayList和LinkedList比较
 
-![image-20220909000850936](https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209090008988.png)
+<img src="https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209090008988.png" alt="image-20220909000850936" style="zoom: 50%;" />
 
 
 
 # HashSet
 
-底层是HashMap，可以存放null，但是只能放一个，不保证元素是有序的，取决于hash后，再确定索引的结果，不重复
+**底层是HashMap，可以存放null，但是只能放一个，不保证元素是有序的，取决于hash后，再确定索引的结果，不重复**
 
 执行add方法后，返回一个boolean值
 
@@ -93,12 +97,12 @@ set.add(new Dog("tome"));//这里会加入两个，因为是不同的对象
 
 ```java
 set.add(new String("hsp"));//ok
-set.add(new String("hsp"));//加不进去
+set.add(new String("hsp"));//加不进去，因为string重写了equals方法
 ```
 
 ### 底层机制
 
-![image-20220909073811538](https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209090738704.png)
+<img src="https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209090738704.png" alt="image-20220909073811538" style="zoom:33%;" />
 
 链表超过64会变成一个红黑树
 
@@ -110,6 +114,8 @@ set.add(new String("hsp"));//加不进去
 4. 没有直接加入
 5. 有，调用equals比较，如果相同，放弃添加，如果不相同，添加到最后，
 6. java8中如果一个链条元素到达默认的8，并且table大小>=64 就会进化红黑树
+
+<img src="https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209231634200.png" alt="image-20220923163451941" style="zoom:50%;" />
 
 ### 源码解读
 
@@ -144,7 +150,7 @@ public V put(K key, V value) {
             if (p.hash == hash &&//假如是java那就指向计算出来的索引为3的这个对象，如果当前索引位置的第一个元素和准备添加的keyhash值一样，并且满足（准备加入的key和p指向的node节点的key是同一个对象，或者不是同一个对象，但是内容相同）就不能加入
                 ((k = p.key) == key || (key != null && key.equals(k))))
                 e = p;
-            else if (p instanceof TreeNode)//再判断p是不是一棵红黑树，如果是，就调用这个
+            else if (p instanceof TreeNode)//判断p是不是一棵红黑树，如果是，就调用这个
                 e = ((TreeNode<K,V>)p).putTreeVal(this, tab, hash, key, value);
             else {//只留下一种，假如是一个表，一个个遍历，如果有相同，走人，没有的话，放在最后。但是注意在把当前元素添加到链表后，立即判断该链表是否已经达到八个节点，调用treefyBin（）对当前链表初始化,在转成红黑树时，继续进行判断，<64时，不会马上变成一棵红黑树，还是继续扩容
                 for (int binCount = 0; ; ++binCount) {
@@ -316,13 +322,15 @@ class Employee {
 
 底层：
 
-![image-20220909123252039](https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209091232726.png)
+<img src="https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209091232726.png" alt="image-20220909123252039" style="zoom: 33%;" />
 
 能够保证存取元素的时候是有一定顺序的
 
-HashMap中存放的是LinkedHashMapNode节点,并且HashMap.Node是一个静态内部类
+HashMap中存放的是LinkedHashMapNode节点,**并且HashMap.Node是一个静态内部类**
 
-![image-20220909130909939](https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209091309109.png)
+数组是HashMap$Node[] 存放的元素时LinkedHashMap Entry 
+
+<img src="https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209091309109.png" alt="image-20220909130909939" style="zoom: 50%;" />
 
 ```java
     static class Entry<K,V> extends HashMap.Node<K,V> {
@@ -671,7 +679,7 @@ key只能有一个null，还是根据哈希值和equals进行比较
 
 ### 底层机制
 
-![image-20220910204625537](https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209102046985.png)
+<img src="https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209102046985.png" alt="image-20220910204625537" style="zoom: 33%;" />
 
 - 扩容机制与hashset一样
 - 底层维护了一个Node类型的table数组，默认为null
@@ -836,7 +844,7 @@ table.put("1",222);
 
 HashMap和HashTable区别
 
-![image-20220911183156056](https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209111831190.png)
+<img src="https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209111831190.png" alt="image-20220911183156056" style="zoom:33%;" />
 
 [(5条消息) HashMap和Hashtable的区别(绝对经典)_棉花糖one.的博客-CSDN博客_hashmap和hashtable的区别](https://blog.csdn.net/qq_42848910/article/details/107779037?ops_request_misc=%7B%22request%5Fid%22%3A%22166289254516782391867057%22%2C%22scm%22%3A%2220140713.130102334..%22%7D&request_id=166289254516782391867057&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~sobaiduend~default-2-107779037-null-null.142^v47^pc_rank_34_default_3,201^v3^control_1&utm_term=hashmap和hashtable&spm=1018.2226.3001.4187)
 
@@ -848,7 +856,7 @@ HashMap和HashTable区别
 
 # 集合的选用
 
-![image-20220912091325034](https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209120913335.png)
+<img src="https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209120913335.png" alt="image-20220912091325034" style="zoom:33%;" />
 
 # TreeSet
 
@@ -931,7 +939,7 @@ public TreeMap(Comparator < ? super K > comparator) {
 
 # TreeMap
 
-![image-20220912100149919](https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209121001007.png)
+<img src="https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209121001007.png" alt="image-20220912100149919" style="zoom:33%;" />
 
 ```java
 //使用默认的构造器，创建 TreeMap, 是无序的(也没有排序)
@@ -1060,7 +1068,7 @@ System.out.println("list 替换后=" + list)
 
 # 作业
 
-![image-20220912111422590](https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209121114716.png)
+<img src="https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209121114716.png" alt="image-20220912111422590" style="zoom:33%;" />
 
 ```java
 public static void main(String[] args) {
@@ -1126,7 +1134,7 @@ class Person implements Comparable{
 
 ### **小题** hashset存入的理解	非常好
 
-![image-20220912171512891](https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209121715073.png)
+<img src="https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209121715073.png" alt="image-20220912171512891" style="zoom:33%;" />
 
 ```java
 public class Test {
@@ -1188,4 +1196,4 @@ class Person {
 
 ### Vector和ArrayList的比较
 
-![image-20220912171713266](https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209121717358.png)
+<img src="https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209121717358.png" alt="image-20220912171713266" style="zoom:33%;" />
