--- a/JavaSE基础/面向对象高级.md
+++ b/JavaSE基础/面向对象高级.md
@@ -16,7 +16,7 @@ child2.count++;
 
 ![image-20220903172629367](https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209031726550.png)
 
-如果jdk7及以下，放在方法区里面，8以上放在堆里面，是一个class对象，保存在class实例尾部，并可以拿到方法去里面的类信息。
+**如果jdk7及以下，放在方法区里面，8以上放在堆里面，是一个class对象，保存在class实例尾部，并可以拿到方法去里面的类信息。**
 
 1. 同一个类的所有对象共享
 
@@ -104,7 +104,6 @@ class Movie {
 3. 最后调用构造方法
 
 ```java
-
 import java.io.*;
 import java.util.*;
 
@@ -184,7 +183,7 @@ Runtime就是饿汉式
 
 ##### 饿汉式
 
-只要类加载了，这个对象就被创建了，即使没有调用，**可能造成资源浪费**
+**只要类加载了，这个对象就被创建了，即使没有调用**，可能造成资源浪费
 
 步骤
 
@@ -337,7 +336,7 @@ class Cat {
 - 抽象类可以无抽象方法，但是抽象方法一定在抽象类里！
 - 抽象类不能实例化！
 
-![image-20220904143425362](https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209041434654.png)
+<img src="https://cdn.jsdelivr.net/gh/hughmum/blogImage/img/202209041434654.png" alt="image-20220904143425362" style="zoom: 50%;" />
 
 ```java
 import jdk.dynalink.beans.StaticClass;
